# esp32_sound_localization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
es32-ws-audio-sensor/: es32-ws-audio-sensor.ino
esp32-ws-audio-server/: package-lock.json  package.json
esp32-ws-audio-server/js/: .gitignore  main.js  worker.js
esp32-ws-audio-server/src/: index.html  server.js
wasm-module/: CMakeLists.txt  wasm_module.cpp  wasm_module.h
